[package]
name = "ghost-speaker"
version = "2.0.0"
edition = "2021"

[dependencies]
ghost-speaker-common = { path = "../common" }
log = "0.4.17"
simplelog = "0.12.1"
shiorust = { git = "https://github.com/Narazaka/shiorust", version = "0.1.0" }
shiori_hglobal = "0.3.0"
serde = { version = "1.0.130", features = ["derive"] }
once_cell = "1.18.0"
encoding_rs = "0.8.33"
serde_yaml = "0.9.27"
serde_json = "1.0.108"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "libloaderapi", "stringapiset", "errhandlingapi", "winnt"] }

[lib]
name = "ghost_speaker"
path = "src/lib.rs"
crate-type = ["cdylib"]
