[package]
name = "ghost-speaker-worker"
version = "1.2.6"
edition = "2021"

[dependencies]
ghost-speaker-common = { path = "../common" }
log = "0.4.17"
simplelog = "0.12.1"
reqwest = { version = "0.11.22", features = ["json"] }
rodio = "0.17.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
regex = "1.10.0"
async-trait = "0.1.74"
sysinfo = "0.29.10"
http = "0.2.9"
once_cell = "1.19.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[[bin]]
name = "ghost_speaker_worker"
path = "src/main.rs"
